--- a/app/style.css
+++ b/app/style.css
@@ -1,12 +1,14 @@
 body {
     padding: 0;
     margin: 0;
+    width: 250px;
 }
 
 input {
     margin: 5px;
-    width: 250px;
-    height: 40px;
+    padding: 20px;
+    width: 100%;
+    min-width: 50%;
     font-size: 45px;
     border-radius: 25px;
     box-shadow: orange;
