--- a/app/style.css
+++ b/app/style.css
@@ -1,13 +1,18 @@
 body {
     padding: 0;
     margin: 0;
-    width: 250px;
+    max-width: 350px;
+    min-width: 150px;
+}
+
+.inputText {
+    display: grid;
 }
 
 input {
     margin: 5px;
     padding: 20px;
-    width: 100%;
+    max-width: 100%;
     min-width: 50%;
     font-size: 45px;
     border-radius: 25px;
